Add Optimal Mixing, toString and fix measurements corner cases